tester/src/test/aya/failure/patterns/issue363.aya.txt
In file $FILE:13:10 ->

  11 |  | a, zero => a
  12 |  | suc a, b => suc (addN a b)
  13 |  | a, suc \impossible
                 ^---------^
  
Error: Absurd pattern does not fit here because `zero` is still avaialble
Tycking interrupted due to error(s).
What are you doing?
